--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
                         <div class="header__left-side">
                             <div class="header__logo">
                                 <div class="logo">
-                                    <div class="logo__icon">
+                                    <a href="/" class="logo__icon">
                                         <img src="./common.blocks/logo/img/logo-image.png" alt="Logo-image" class="logo__image">
-                                    </div>
+                                    </a>
                                 </div>
                             </div>
                             <div class="header__links">
@@ -32,7 +32,7 @@
                                             </a>
                                         </div>
                                         <div class="header-links__item">
-                                            <a href="#" class="header-links__link">
+                                            <a href="catalog.html" class="header-links__link">
                                                 Каталог
                                             </a>
                                         </div>
@@ -162,12 +162,12 @@
                                             <div class="slider-navigation__wrapper">
                                                 <div class="slider-navigation__button slider-button-prev">
                                                     <svg class="slider-navigation__icon">
-                                                        <use xlink:href="#keyboard-arrow-left"></use>
+                                                        <use xlink:href="#arrow-left-long"></use>
                                                     </svg>
                                                 </div>
                                                 <div class="slider-navigation__button slider-button-next">
                                                     <svg class="slider-navigation__icon">
-                                                        <use xlink:href="#keyboard-arrow-right"></use>
+                                                        <use xlink:href="#arrow-right-long"></use>
                                                     </svg>
                                                 </div>
                                             </div>
@@ -441,7 +441,7 @@
                                                                     <div class="work-card__overlay"></div>
                                                                     <div class="work-card__content">
                                                                         <h3 class="work-card__title">
-                                                                            Бетонный бассейн в частном доме
+                                                                            Реставрация открытого бассейна в Ахунах
                                                                         </h3>
                                                                         <div class="work-card__address">
                                                                             <svg class="work-card__pointer icon icon_size_s icon_color_white">
@@ -456,7 +456,7 @@
                                                                             июнь-июль 2019
                                                                         </span>
                                                                             <svg class="work-card__arrow">
-                                                                                <use xlink:href="#keyboard-arrow-right"></use>
+                                                                                <use xlink:href="#arrow-right-long"></use>
                                                                             </svg>
                                                                         </div>
                                                                     </div>
@@ -488,40 +488,7 @@
                                                                             июнь-июль 2019
                                                                         </span>
                                                                             <svg class="work-card__arrow">
-                                                                                <use xlink:href="#keyboard-arrow-right"></use>
-                                                                            </svg>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                                <div class="swiper-slide">
-                                                    <a href="#" class="work-card">
-                                                        <div class="work-card__frame" style="background-image: url(${require('./common.blocks/work-card/img/work-ex.jpg')})">
-                                                            <div class="work-card__information">
-                                                                <div class="work-card__wrapper">
-                                                                    <div class="work-card__overlay"></div>
-                                                                    <div class="work-card__content">
-                                                                        <h3 class="work-card__title">
-                                                                            Бетонный бассейн в частном доме
-                                                                            Бетонный бассейн в частном доме
-                                                                        </h3>
-                                                                        <div class="work-card__address">
-                                                                            <svg class="work-card__pointer icon icon_size_s icon_color_white">
-                                                                                <use xlink:href="#marker"></use>
-                                                                            </svg>
-                                                                            <span class="work-card__caption">
-                                                                                Пенза, мкр. Терновка
-                                                                            </span>
-                                                                        </div>
-                                                                        <div class="work-card__date">
-                                                                        <span class="work-card__date-info">
-                                                                            июнь-июль 2019
-                                                                        </span>
-                                                                            <svg class="work-card__arrow">
-                                                                                <use xlink:href="#keyboard-arrow-right"></use>
+                                                                                <use xlink:href="#arrow-right-long"></use>
                                                                             </svg>
                                                                         </div>
                                                                     </div>
@@ -553,7 +520,39 @@
                                                                             июнь-июль 2019
                                                                         </span>
                                                                             <svg class="work-card__arrow">
-                                                                                <use xlink:href="#keyboard-arrow-right"></use>
+                                                                                <use xlink:href="#arrow-right-long"></use>
+                                                                            </svg>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                </div>
+                                                <div class="swiper-slide">
+                                                    <a href="#" class="work-card">
+                                                        <div class="work-card__frame" style="background-image: url(${require('./common.blocks/work-card/img/work-ex.jpg')})">
+                                                            <div class="work-card__information">
+                                                                <div class="work-card__wrapper">
+                                                                    <div class="work-card__overlay"></div>
+                                                                    <div class="work-card__content">
+                                                                        <h3 class="work-card__title">
+                                                                            Бетонный бассейн в частном доме
+                                                                        </h3>
+                                                                        <div class="work-card__address">
+                                                                            <svg class="work-card__pointer icon icon_size_s icon_color_white">
+                                                                                <use xlink:href="#marker"></use>
+                                                                            </svg>
+                                                                            <span class="work-card__caption">
+                                                                                Пенза, мкр. Терновка
+                                                                            </span>
+                                                                        </div>
+                                                                        <div class="work-card__date">
+                                                                        <span class="work-card__date-info">
+                                                                            июнь-июль 2019
+                                                                        </span>
+                                                                            <svg class="work-card__arrow">
+                                                                                <use xlink:href="#arrow-right-long"></use>
                                                                             </svg>
                                                                         </div>
                                                                     </div>
